Fixed popup bug

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 <body>
     <div class="header">
-        <h1>Rock Paper Scissors <br>vs Batman</h1>
+        <h1>Scissors Paper Stone <br>vs Batman</h1>
         <h2>Choose Your Move</h2>
     </div>
     
